[gd_scene load_steps=9 format=3 uid="uid://dhqlkkqai6lw4"]

[ext_resource type="PackedScene" uid="uid://c5sddbm3k3mq4" path="res://Assets/Models/Sword.dae" id="1_o7rwu"]
[ext_resource type="Script" path="res://CameraOrbit.gd" id="1_xbd16"]
[ext_resource type="Script" path="res://player.gd" id="1_yijrm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8kl5w"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ka3ny"]

[sub_resource type="Animation" id="Animation_nd1fi"]
resource_name = "attack"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1001, 0.2, 0.3, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.349066, 0, 0), Vector3(0.872665, 0, 0), Vector3(0.349066, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_u0yil"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.602139, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5pfk8"]
_data = {
"RESET": SubResource("Animation_u0yil"),
"attack": SubResource("Animation_nd1fi")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_yijrm")

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_8kl5w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ka3ny")

[node name="CameraOrbit" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_xbd16")

[node name="Camera3D" type="Camera3D" parent="CameraOrbit"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 1, -5)

[node name="WeaponHolder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.824126, -0.566406, 0, 0.566406, 0.824126, -0.58, 1, 0.035)

[node name="Sword" parent="WeaponHolder" instance=ExtResource("1_o7rwu")]
transform = Transform3D(-4.63629e-09, 4.63629e-09, 0.15, 0.106066, 0.106066, 0, -0.106066, 0.106066, -6.55671e-09, 0, 0, 0)

[node name="SwordAnimator" type="AnimationPlayer" parent="WeaponHolder"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_5pfk8")
}

[node name="AttackRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1, 0.6)
target_position = Vector3(0, 0, 1.5)
